@@ -1,9 +1,33 @@
-* Be able to handle whatever namespace name is given to the schema namespace.
+* The cells/nodes should be named based on the name of the type.
+
+* Make the cells shaped differently for different types of nodes (rounded
+  corners etc.).
+
+* Create an icon for the choice and sequence nodes so they look more like
+  XMLSpy
+
+* Allow the display of more information for each cell such as the name of a
+  complexType, simpleType or element for example.
+
+* Allow collapsing of the schema tree.
 
 * Size each cell based on the size of the text within it.
 
 * Look at Edge.Routing to try to orthoganal lines connecting nodes.
 
+* Maybe add a panel that displays the schema roots and allows you to choose one
+  to display like in XMLSpy.
+
+* Explore key, unique, keyref, annotation, list, restriction, list, and union
+  elements. How should they be displayed?
+
+* Show attributes that the type can have.
+
+* Build into the schema tree inherited attributes from other types. Show a box
+  around the attributes like XMLSpy.
+
 * Begin to build in the editing features.
     * Override insert and remove methods in SchemaViewGraphModel to catch
       insert and remove events so they can be passed to the Tree model.
+    * Add a context menu that pops up when right clicking on nodes to allow you
+      to add and remove nodes from the schema tree.
